--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.5",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-neon": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.1",
+    "react-hot-toast": "^2.6.0",
+    "react-select": "^5.10.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "ws": "^8.18.3"
+    "uploadthing": "^7.7.4",
+    "ws": "^8.18.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
